整体测试通过，编译环境和插件均已搞定

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,6 +8,7 @@ CPATH = -Lsrc
 SRCS = $(wildcard *.c)
 OBJECTS = $(patsubst %c,%o, $(SRCS))
 
+all:$(OBJECTS)
 
 $(OBJECTS):$(SRCS)
 	$(CC) $(CINCLUDE) $(CFLAGS) $< -o ../build/$@
